<resources>
    <string name="app_name">Destinasi Wisata Bali</string>
    <string name="title_activity_dashboard">Destinasi Wisata Bali</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Destinasi Wisata Bali</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_search">Search</string>
    <string name="tentang">Tentang</string>
    <string name="kategori">Kategori</string>
    <string name="sampul">Sampul</string>
    <string name="favorite">Favorite</string>
    <string name="hubungikami">Hubungi Kami</string>
    <string name="bahasa">Bahasa</string>
    <string name="beranda">Beranda</string>
    <string name="tentang_app">DESTINASI WISATA BALI\n
        Aplikasi Destinasi WIsata Bali ini adalah sebuah aplikasi yang ditujukan untuk yang dibuat untuk mempermudah wisatawan untuk memperoleh informasi tujuan wisata yang menarik di Pulau Dewata.
        Aplikasi ini dibuat simple sehingga mudah digunakan untuk masyarakat umum.\n\n
        Selain itu, tujuan dari pembuatan aplikasi ini adalah untuk menyelesaikan tugas mata kuliah Pemrograman Mobile yang sedang kami jalani tahun ini.
    </string>
    <string name="kontak">Informasi lebih lanjut, hubungi kami pada waktu yang tepat untuk Anda dan kami akan menjawab semua pertanyaan anda.\n
        Telp: +6281234567890 \nEmail: gmail@kelompok5.com
    </string>
    <string name="deskripsi_bahasa">
        Bahasa yang tersedia pada versi ini yaitu:
        \n- Indonesia
        \n- English\n\n
    </string>
    <string name="bahasa_saat_ini">Bahasa saat ini:</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>

</resources>
