<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:title="@string/beranda"/>
        <item
            android:id="@+id/nav_kategori"
            android:title="@string/kategori" />
        <!--<item-->
            <!--android:id="@+id/nav_favorite"-->
            <!--android:title="@string/favorite"/>-->
        <item
            android:id="@+id/nav_bahasa"
            android:title="@string/bahasa"/>
        <item
            android:id="@+id/nav_tentang"
            android:title="@string/tentang" />
        <item
            android:id="@+id/nav_kontak"
            android:title="@string/hubungikami"/>

    </group>

</menu>
