<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BahasaActivity">

    <TextView
        android:id="@+id/tv_deskripsi_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_bahasa" />

    <Button
        android:id="@+id/btn_ganti_bahasa"
        android:layout_below="@+id/tv_deskripsi_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ganti_bahasa"/>

    <TextView
        android:id="@+id/tv_bahasa_saat_ini"
        android:layout_below="@+id/btn_ganti_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bahasa_saat_ini" />
</RelativeLayout>